--- a/OpenBootcamp - HTML y CSS/index.html
+++ b/OpenBootcamp - HTML y CSS/index.html
@@ -7,8 +7,8 @@
     <title>Ejercicio de Introducción a HTML en OpenBootcamp</title>
 </head>
 <body>
-    <p>Este es mi primer comentario de dos línea</p>
-    <p>Aprendiendo a documentar mi código con OpenBootcamp</p>
+    <!-- Este es mi primer comentario de dos línea -->
+    <!-- Aprendiendo a documentar mi código con OpenBootcamp -->
 
     <ul>
         <li><a href="//youtu.be/ZXgX3GSIIKo">Special Forces - "Tip of the Spear"</a></li>
